fix spacing issues in subjects/resources fields

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -297,11 +297,6 @@ input[type=submit] {
   border-radius: 5px;
   background-color: #8abb96;
   width: 45%;
- 
-}
-
-.search-container:hover .gcse-search {
-  display: unset;
 }
 
 @-webkit-keyframes animatedBackground {
@@ -387,6 +382,8 @@ header {
   background-color: rgba(255, 255, 255, 0.657);
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
 }
 
 .buttons-container {
